Version 2.02.75 - 
=====================================
  Convey need for snapshot-merge target in lvconvert error message and man page.
  Add "devices/disable_after_error_count" to lvm.conf.
  Give correct error message when creating a too-small snapshot.
  Implement vgextend --restoremissing.
  Refactor and add 'get' functions for lv properties/fields.
  Update script for fsadm testing.
  Better support of noninteractive shell execution of fsadm.
  Fix usage of --yes flag for ReiserFS resize in fsadm.
  Fix detection of mounted filesystems for fsadm when udev is used.
  Fix assignment of default value to LVM variable is fsadm.
  Fix support for --yes flag for fsadm.
  Do not execute lvresize with --dry-run option for fsadm.
  Fix fsadm return error code from user's break action.
  Allow CC to be overridden at build time (for 'scan-build make').
  Rename 'flags' to 'status' in struct metadata_area.
  Avoid segfault by limiting partial mode for lvm1 metadata. (2.02.74)
  Add dm_zalloc and use it and dm_pool_zalloc throughout.
  Add pv_get_property and create generic internal _get_property function.
  Add 'get' functions for pv and vg properties/fields.
  Make generic GET_*_PROPERTY_FN macros with secondary macro for vg, pv & lv.
  Add tags_format_and_copy() common function and call from _tags_disp.
  Add id_format_and_copy() common function and call from _uuid_disp.
  Simplify logic to create '{pv|vg|lv}_attr' strings.
  Refactor report.c '*_disp' functions to call supporting functions.
  Refactor lib/metadata/metadata.[ch] into {pv|vg|lv}.[ch].
  Fix memory leak of vg_read while using live copies of metadata in directories.
  Fix memory leak of config_tree in reinitialization code path.
  Swap pool destruction order in dmeventd_lvm2_exit() to fix leak report.
  Read whole /proc/self/maps file before working with maps entries.
  Speed up unquoting of quoted double quotes and backslashes.
  Speed up CRC32 calculations by using a larger lookup table.
